fixed div and navbar spacing

--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background-color: #24252A;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #24252A;
+}
+
+div {
+    padding: 10px;
 }
 
 h1, p, li, a, button {
@@ -18,7 +22,6 @@ h1 {
 
 p {
   text-align: justify;
-  padding: 15px;
 }
 
 li, a, button {
@@ -31,7 +34,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px;
+    padding: 6px;
 }
 
 .logo {
