--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -1,15 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background-color: #24252A;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #24252A;
+}
+
+div {
+    padding: 10px;
 }
 
 h1, p, li, a, button {
-  color: #edf0f1;
-  font-family: "Montserrat", sans-serif;
+    color: #edf0f1;
+    font-family: "Montserrat", sans-serif;
 }
 
 h1 {
@@ -17,8 +21,7 @@ h1 {
 }
 
 p {
-  text-align: justify;
-  padding: 15px;
+    text-align: justify;
 }
 
 li, a, button {
@@ -31,7 +34,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px;
+    padding: 6px;
 }
 
 .logo {
