--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -7,6 +7,10 @@
     background-color: #24252A;
 }
 
+div {
+    padding: 10px;
+}
+
 h1, h2, h3, h4, p, li, a, button {
   color: #edf0f1;
   font-family: "Montserrat", sans-serif;
@@ -14,11 +18,10 @@ h1, h2, h3, h4, p, li, a, button {
 
 h1 {
     text-align: center;
-  }  
+  }
 
 p {
   text-align: justify;
-  padding: 15px;
 }
 
 li, a, button {
@@ -31,7 +34,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px;
+    padding: 6px;
 }
 
 .logo {
